package example.entity;

/**
 * Enum đại diện cho các cấp độ thành viên (Membership Level) của tài khoản.
 * Bao gồm các hạng: SILVER (Bạc), GOLD (Vàng), PLAT (Bạch kim).
 * 
 * Ngày thực hiện: 04/06/2026
 * Tạo bởi: DuongND_HE186619
 */
public enum MembershipLevel {
    SILVER,
    GOLD,
    PLAT
}
