@startuml
title Cinema Core Domain Class Diagram
hide methods
hide circle
skinparam classAttributeIconSize 0
skinparam shadowing false

package Identity {
  class Account {
    accountID : int
    name : String
    email : String
    password : String
    phoneNum : String
    address : String
    dob : LocalDate
    gender : String
    avatar : String
    loyaltyPoint : int
    status : boolean
  }

  enum Role {
    ADMIN
    MANAGER
    CUSTOMER
  }

  enum MembershipLevel {
    SILVER
    GOLD
    PLAT
  }
}

package Catalog {
  class Movie {
    id : int
    title : String
    genre : String
    duration : Integer
    releaseDate : LocalDate
    status : MovieStatus
    active : boolean
  }

  enum MovieStatus {
    NOW_SHOWING
    COMING_SOON
    SPECIAL_SCREENING
  }

  class Showtime {
    id : Long
    showDate : LocalDate
    showTime : LocalTime
    room : String
    dayType : String
  }

  class Room {
    id : Long
    roomName : String
    roomType : String
    audioTech : String
    rows : int
    cols : int
    totalSeats : int
    status : String
    cinemaId : Long
  }

  class Seat {
    id : Long
    roomId : Long
    rowIndex : int
    colIndex : int
    seatLabel : String
    seatType : String
  }

  class RoomType {
    id : Long
    name : String
    active : boolean
  }

  class SeatType {
    id : Long
    code : String
    displayName : String
    color : String
    capacity : int
    sellable : boolean
    active : boolean
  }

  class AudioTechnology {
    id : Long
    name : String
    active : boolean
  }
}

package Commerce {
  class Combo {
    id : Long
    name : String
    price : BigDecimal
    status : String
  }

  class ComboItem {
    id : Long
    quantity : Integer
    unitPrice : BigDecimal
    costPrice : BigDecimal
  }

  class FoodItem {
    id : Long
    name : String
    category : String
    unitPrice : BigDecimal
    costPrice : BigDecimal
    status : String
  }
}

package Content {
  class Post {
    id : Long
    title : String
    category : String
    status : String
  }

  class Banner {
    id : Long
    title : String
    page : BannerPage
    displayOrder : Integer
    active : boolean
  }

  enum BannerPage {
    HOME
    NEWS
  }

  class MoviePersonSuggestion {
    id : int
    name : String
    type : String
  }
}

Account --> Role
Account --> MembershipLevel
Movie --> MovieStatus
Showtime --> Movie
Room o-- Seat
Seat --> SeatType
Room --> RoomType
Room --> AudioTechnology
Combo *-- ComboItem
ComboItem --> FoodItem
Banner --> BannerPage
@enduml
